--- a/src/App.css
+++ b/src/App.css
@@ -267,3 +267,14 @@ footer P{
 .tempInformation{
   width: auto;
 }
+.buttonDesign{
+  width: 200;
+}
+.giveHeight{
+  
+ margin-left: 30;
+}
+
+
+
+
